# eccodes

./: Cargo.toml  README.md
.github/workflows/: coverage.yml  rust-dev.yml  rust.yml
benches/: main.rs
data/: iceland-levels-bad-path.grib.idx  iceland-levels.grib  iceland-surface.grib  iceland-surface.grib.923a8.idx  iceland-surface.grib.idx  iceland.grib
src/: codes_handle.rs  codes_index.rs  codes_nearest.rs  constructors.rs  destructor.rs  errors.rs  intermediate_bindings.rs  keys_iterator.rs  lib.rs  message_ndarray.rs  pointer_guard.rs
src/atomic_message/: mod.rs  read.rs
src/codes_file/: iterator.rs  mod.rs
src/codes_handle/: atomic_iterator.rs  iterator.rs  keyed_message.rs  mod.rs
src/codes_handle/keyed_message/: iterator.rs  mod.rs  nearest.rs  read.rs  write.rs
src/codes_index/: mod.rs
src/codes_message/: clone.rs  mod.rs  ndarray.rs  read.rs  write.rs
src/intermediate_bindings/: codes_get.rs  codes_handle.rs  codes_index.rs  codes_keys.rs  codes_set.rs  grib_nearest.rs  mod.rs
src/keyed_message/: clone.rs  mod.rs  ops.rs  read.rs  write.rs
tests/: example.rs  handle.rs  index.rs
