[package]
name = "eccodes"
description = "Unofficial high-level Rust bindings of the latest ecCodes release"
repository = "https://github.com/ScaleWeather/eccodes"
version = "0.9.0"
readme = "README.md"
authors = ["Jakub Lewandowski <scaleweather@gmail.com>"]
keywords = ["eccodes", "grib", "bufr", "meteorology", "weather"]
categories = [
    "api-bindings",
    "external-ffi-bindings",
    "filesystem",
    "encoding",
    "science",
]
license = "Apache-2.0"
edition = "2021"
exclude = [".github/*", ".vscode/*", ".idea/*", "data/*"]

[dependencies]
eccodes-sys = "0.5.2"
libc = "0.2"
thiserror = "1.0"
bytes = "1.5"
log = "0.4"
errno = "0.3"
num-derive = "0.4.1"
num-traits = "0.2"
fallible-iterator = "0.3"
fallible-streaming-iterator = "0.1.9"
ndarray = { version = "0.15", default-features = false, optional = true, features = ["std"]}

[dev-dependencies]
reqwest = { version = "0.11", features = ["rustls-tls"] }
tokio = { version = "1.35", features = ["macros", "rt"] }
criterion = "0.5"
testing_logger = "0.1"
rand = "0.8"
anyhow = "1.0"
float-cmp = "0.9"

[features]
default = ["message_ndarray"]
docs = ["eccodes-sys/docs"]
experimental_index = []
message_ndarray = ["ndarray"]

[package.metadata.docs.rs]
features = ["docs", "experimental_index"]

[[bench]]
name = "main"
harness = false

[lib]
doctest = false
