[package]
name = "eccodes"
description = "Unofficial high-level Rust bindings of the latest ecCodes release"
repository = "https://github.com/ScaleWeather/eccodes"
version = "0.10.3"
readme = "README.md"
authors = ["Jakub Lewandowski <scaleweather@gmail.com>"]
keywords = ["eccodes", "grib", "bufr", "meteorology", "weather"]
categories = [
    "api-bindings",
    "external-ffi-bindings",
    "filesystem",
    "encoding",
    "science",
]
license = "Apache-2.0"
edition = "2021"
exclude = [".github/*", ".vscode/*", ".idea/*", "data/*"]
rust-version = "1.70.0"

[dependencies]
eccodes-sys = { version = "0.5.2", default-features = false }
libc = { version = "0.2", default-features = false }
thiserror = { version = "1.0", default-features = false }
bytes = { version = "1.6", default-features = false }
log = { version = "0.4", default-features = false }
errno = { version = "0.3", default-features = false }
num-derive = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }
fallible-iterator = { version = "0.3", default-features = false }
fallible-streaming-iterator = { version = "0.1.9", default-features = false }
ndarray = { version = "0.15", default-features = false, optional = true, features = [
    "std",
] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["rustls-tls"] }
criterion = "0.5"
testing_logger = "0.1"
rand = "0.8"
anyhow = { version = "1.0", features = ["backtrace"] }
float-cmp = "0.9"

[features]
default = ["message_ndarray"]
docs = ["eccodes-sys/docs"]
experimental_index = []
message_ndarray = ["dep:ndarray"]

[package.metadata.docs.rs]
features = ["docs", "experimental_index", "message_ndarray"]

[[bench]]
name = "main"
harness = false
